feat: added more projects

--- a/makes.html
+++ b/makes.html
@@ -81,7 +81,7 @@
                             <h6>July '19, revisited Jan '23</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/placeholder.png">
+                            <img src="./img/thinlinetele.png">
                         </div>
                     </li>
                     <li class="row item-container">
