--- a/projects.html
+++ b/projects.html
@@ -83,6 +83,11 @@
                                 <li class="list-inline-item">HTML</li>
                                 <li class="list-inline-item">JavaScript</li>
                                 <li class="list-inline-item">CSS</li>
+                                <li class="list-inline-item">Bootstrap</li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li></li>
+                                <li class="list-inline-item"><a href="./files" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-book"></i></a></li>
                             </ul>
                             <a href="https://github.com/andre-tm-hui/andre-tm-hui.github.io"><i class="fa-brands fa-github"></i></a>
                             <h6>Jan '23</h6>
@@ -106,11 +111,38 @@
                                 <li class="list-inline-item">Deep Learning</li>
                                 <li class="list-inline-item">Games</li>
                             </ul>
-                            <a href="https://github.com/andre-tm-hui/learning-tetris" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-gamepad"></i></a>
-                            <h6>Oct '20 - Apr '21</h6>
+                            <ul class="list-inline">
+                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/learning-tetris" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item"><a href="./files/tetrisai.pdf" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-book"></i></a></li>
+                            </ul>
+                            <h6>Oct '20 - May '21</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
                             <img src="./img/tetrispv.gif">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Style Transfer - Game2Movie</h3>
+                            <h4>4th Year Project</h4>
+                            <p>
+                                In an attempt to make a classic video game (Mafia) look more realistic, a Contrastive Unpaired Translation model is trained on various mafia-based movie clips.
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">Python</li>
+                                <li class="list-inline-item">Pytorch</li>
+                                <li class="list-inline-item">Computer Vision</li>
+                                <li class="list-inline-item">Style Transfer</li>
+                                <li class="list-inline-item">Deep Learning</li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/Game2Movie" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item"><a href="./files/game2movie.pdf" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-book"></i></a></li>
+                            </ul>
+                            <h6>Jan '21 - May '21</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/styletransfer.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -129,11 +161,86 @@
                                 <li class="list-inline-item">Image Processing</li>
                                 <li class="list-inline-item">HCI</li>
                             </ul>
-                            <a href="https://github.com/andre-tm-hui/learning-tetris" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-gamepad"></i></a>
+                            <ul class="list-inline">
+                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/Single-RGB-Camera-Gesture-Controller" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item"><a href="./files/posehci.pdf" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-book"></i></a></li>
+                            </ul>
                             <h6>Oct '19 - Apr '20</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/placeholder.png">
+                            <img src="./img/posehci.gif">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Pegasus Generator</h3>
+                            <h4>3rd Year Project</h4>
+                            <p>
+                                A Variational Auto-Encoder/Generative Adversarial Network that learns to generate images of pegasi, using images of horses and birds.
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">Python</li>
+                                <li class="list-inline-item">Pytorch</li>
+                                <li class="list-inline-item">Deep Learning</li>
+                                <li class="list-inline-item">Image Processing</li>
+                                <li class="list-inline-item">VAE/GAN</li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/Deep-Learning---Pegasus" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item"><a href="./files/pegasus.pdf" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-book"></i></a></li>
+                            </ul>
+                            
+                            <h6>Oct 19 - Jan '20</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/pegasus.png">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Object Detection in Vehicles</h3>
+                            <h4>3rd Year Project</h4>
+                            <p>
+                                Semi-Global Block Matching and Sparse Stereo Vision are applied to a dataset of stereo images taken from a car in motion, with the goal to detect objects using YOLOv3 and identify their proximity.
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">Python</li>
+                                <li class="list-inline-item">Pytorch</li>
+                                <li class="list-inline-item">Deep Learning</li>
+                                <li class="list-inline-item">Computer Vision</li>
+                                <li class="list-inline-item">Image Processing</li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/Computer-Vision-Object-Detection-and-Depth" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item"><a href="./files/carobjdetect.pdf" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-book"></i></a></li>
+                            </ul>
+                            <h6>Oct 19 - Dec '19</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/objdetect.gif">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Ultimate Tic-Tac-Toe</h3>
+                            <h4>2nd Year Coursework</h4>
+                            <p>
+                                A dynamic webapp, letting users challenge each other in games of Ultimate Tic-Tac-Toe. Complete with a chatroom, friends list and P2P matchmaking.
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">HTML</li>
+                                <li class="list-inline-item">CSS</li>
+                                <li class="list-inline-item">JavaScript</li>
+                                <li class="list-inline-item">Node.js</li>
+                                <li class="list-inline-item">AJAX</li>
+                                <li class="list-inline-item">Bootstrap</li>
+                                <li class="list-inline-item">Networking</li>
+                            </ul>
+                            <a href="https://github.com/andre-tm-hui/Web-Programming-Ultimate-TicTacToe" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-gamepad"></i></a>
+                            <h6>Oct '18 - Jan '19</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/ultxo.gif">
                         </div>
                     </li>
                 </ul>
