feat: added more projects

--- a/projects.html
+++ b/projects.html
@@ -86,10 +86,9 @@
                                 <li class="list-inline-item">Bootstrap</li>
                             </ul>
                             <ul class="list-inline">
-                                <li></li>
-                                <li class="list-inline-item"><a href="./files" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-book"></i></a></li>
+                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/andre-tm-hui.github.io"><i class="fa-brands fa-github"></i></a></li>
                             </ul>
-                            <a href="https://github.com/andre-tm-hui/andre-tm-hui.github.io"><i class="fa-brands fa-github"></i></a>
+                            
                             <h6>Jan '23</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
@@ -222,6 +221,26 @@
                     </li>
                     <li class="row item-container">
                         <div class="col-12 col-sm-7 item-description">
+                            <h3>OpenGL Whitechurch, Durham</h3>
+                            <h4>2nd Year Coursework</h4>
+                            <p>
+                                A 3D rendering of Whitechurch, Durham, complete with an animated moving car and interactive elements, made with OpenGL.
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">HTML</li>
+                                <li class="list-inline-item">JavaScript</li>
+                                <li class="list-inline-item">OpenGL</li>
+                                <li class="list-inline-item">Blender</li>
+                            </ul>
+                            <a href="https://github.com/andre-tm-hui/CG---Whitechurch--Durham-in-WebGL" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                            <h6>Jan '19 - Apr '19</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/opengl.gif">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
                             <h3>Ultimate Tic-Tac-Toe</h3>
                             <h4>2nd Year Coursework</h4>
                             <p>
@@ -236,7 +255,7 @@
                                 <li class="list-inline-item">Bootstrap</li>
                                 <li class="list-inline-item">Networking</li>
                             </ul>
-                            <a href="https://github.com/andre-tm-hui/Web-Programming-Ultimate-TicTacToe" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-gamepad"></i></a>
+                            <a href="https://github.com/andre-tm-hui/Web-Programming-Ultimate-TicTacToe" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
                             <h6>Oct '18 - Jan '19</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
