--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 
         <title>Andre Hui - Projects</title>
 
-        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
         <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <body id="page-top">
         <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top" id="navbar">
             <div class="container-fluid navbar-container">
-                <a class="navbar-brand" href="./"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
+                <a class="navbar-brand" href="./"><img class="nav-home" src="rc/signature.png"  alt="Home"></a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars navbar-toggler-custom-icon"></i>
                 </button>
@@ -49,6 +49,35 @@
                 <ul class="items container-fluid">
                     <li class="row item-container">
                         <div class="col-12 col-sm-7 item-description">
+                            <h3>Sostenahto</h3>
+                            <h4>Infinite Sustain Audio Plugin</h4>
+                            <p>
+                                Extend your chords and notes to infinity. Explore new ways to make atmospheric music, or just have fun noodling on your instrument.<br><br>
+                                Started off as a random thought - "Maybe a piano pedal for guitars would be cool". After much research and learning, now it's a fully functional donationware plugin that can be dropped into a DAW or VST host.<br><br>
+                                Just as an experiment, I've also created and deployed a RESTful API to manage licensing of the product (skips a boot splash screen).
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">C++</li>
+                                <li class="list-inline-item">JUCE</li>
+                                <li class="list-inline-item">Digital Signal Processing</li>
+                                <li class="list-inline-item">Audio</li>
+                                <li class="list-inline-item">TypeScript</li>
+                                <li class="list-inline-item">Firebase</li>
+                                <li class="list-inline-item">Windows</li>
+                                <li class="list-inline-item">Mac</li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li class="list-inline-item"><a href="./ahdio/sostenahto"><i class="fa-solid fa-link"></i></a></li>
+                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/ReVox" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                            </ul>
+                            <h6>Mar '23 - May '23</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./rc/placeholder.png">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
                             <h3>ReVox</h3>
                             <h4>Soundboard, Voice Changer</h4>
                             <p>
@@ -63,13 +92,13 @@
                                 <li class="list-inline-item">Windows</li>
                             </ul>
                             <ul class="list-inline">
-                                <li class="list-inline-item"><a href="./revox"><i class="fa-solid fa-link"></i></a></li>
+                                <li class="list-inline-item"><a href="./ahdio/revox"><i class="fa-solid fa-link"></i></a></li>
                                 <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/ReVox" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
                             </ul>
                             <h6>May '22 - </h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/intro.gif">
+                            <img src="./rc/intro.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -92,7 +121,7 @@
                             <h6>Jan '23</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/webportfolio.gif">
+                            <img src="./rc/webportfolio.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -117,7 +146,7 @@
                             <h6>Oct '20 - May '21</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/tetrispv.gif">
+                            <img src="./rc/tetrispv.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -141,7 +170,7 @@
                             <h6>Jan '21 - May '21</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/styletransfer.gif">
+                            <img src="./rc/styletransfer.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -167,7 +196,7 @@
                             <h6>Oct '19 - Apr '20</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/posehci.gif">
+                            <img src="./rc/posehci.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -192,7 +221,7 @@
                             <h6>Oct 19 - Jan '20</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/pegasus.png">
+                            <img src="./rc/pegasus.png">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -216,7 +245,7 @@
                             <h6>Oct 19 - Dec '19</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/objdetect.gif">
+                            <img src="./rc/objdetect.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -236,7 +265,7 @@
                             <h6>Jan '19 - Apr '19</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/opengl.gif">
+                            <img src="./rc/opengl.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -259,7 +288,7 @@
                             <h6>Oct '18 - Jan '19</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/ultxo.gif">
+                            <img src="./rc/ultxo.gif">
                         </div>
                     </li>
                 </ul>
@@ -278,7 +307,7 @@
         </section>
 
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 
