--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <title>Andre Hui</title>
 
-        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
         <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <body id="page-top">      
         <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top" id="navbar">
             <div class="container-fluid navbar-container">
-                <a class="navbar-brand" href="#"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
+                <a class="navbar-brand" href="#"><img class="nav-home" src="rc/signature.png"  alt="Home"></a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars navbar-toggler-custom-icon"></i>
                 </button>
@@ -29,6 +29,9 @@
                     <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                         <li class="nav-item">
                             <a class="nav-link" href="/revox">ReVox</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/sostenahto">Sostenahto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/games">Games</a>
@@ -63,7 +66,7 @@
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3" style="text-align: right; margin: auto;">
-                        <img src="img/render.png" style="height: 280px;">
+                        <img src="rc/render.png" style="height: 280px;">
                     </div>
                 </div>
             </section>
@@ -72,7 +75,7 @@
                 <div class="row section-content" style="max-width: 100%;">
                     <h2>Some Things I've Made</h2>
                     <div class="carousel">
-                        <a href="/revox" class="item container-fluid">
+                        <a href="ahdio/revox" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5 carousel-description">
                                     <h3 class="row">ReVox</h3>
@@ -86,7 +89,26 @@
                                     </ul>
                                 </div>
                                 <div class="col-12 col-sm-7 img-container">
-                                    <img src="img/intro.gif">
+                                    <img src="rc/intro.gif">
+                                </div>
+                            </div>
+                        </a>
+                        <a href="ahdio/sostenahto" class="item container-fluid">
+                            <div class="row" style="padding: 5%;">
+                                <div class="col-12 col-sm-5 carousel-description">
+                                    <h3 class="row">Sostenahto</h3>
+                                    <h4 class="row">Infinite Sustain Audio Plugin</h4>
+                                    <p class="row">Drag out your notes and chords for as long as you want, and explore new ways to make music. Designed for guitars and instruments with digital outputs.</p>
+                                    <ul class="list-inline tech-stack">
+                                        <li class="list-inline-item">C++</li>
+                                        <li class="list-inline-item">DSP</li>
+                                        <li class="list-inline-item">JUCE</li>
+                                        <li class="list-inline-item">Windows</li>
+                                        <li class="list-inline-item">Mac</li>
+                                    </ul>
+                                </div>
+                                <div class="col-12 col-sm-7 img-container">
+                                    <img src="rc/placeholder.png">
                                 </div>
                             </div>
                         </a>
@@ -105,7 +127,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-12 col-sm-7 img-container">
-                                    <img src="img/drumspv.gif">
+                                    <img src="rc/drumspv.gif">
                                 </div>
                             </div>
                         </a>
@@ -123,11 +145,11 @@
                                     </ul>
                                 </div>
                                 <div class="col-12 col-sm-7 img-container">
-                                    <img src="img/sideoutpv.gif">
+                                    <img src="rc/sideoutpv.gif">
                                 </div>
                             </div>
                         </a>
-                        <a href="https://github.com/andre-tm-hui/LearningTetris" target="_blank" rel="noopener noreferrer" class="item container-fluid">
+                        <!--<a href="https://github.com/andre-tm-hui/LearningTetris" target="_blank" rel="noopener noreferrer" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5">
                                     <h3 class="row">Tetris AI</h3>
@@ -142,10 +164,10 @@
                                     </ul>
                                 </div>
                                 <div class="col-12 col-sm-7 img-container">
-                                    <img src="img/tetrispv.gif">
+                                    <img src="rc/tetrispv.gif">
                                 </div>
                             </div>
-                        </a>
+                        </a>-->
                         <div class="carousel-button-container">
                             <div class="carousel-button" id="carouselPrevious"><i class="fas fa-angle-left"></i></div>
                             <div class="carousel-button" id="carouselNext"><i class="fas fa-angle-right"></i></div>
@@ -162,12 +184,12 @@
                         <div class="row flex-row-reverse">
                             <div class="about-description col-12 col-sm-7">
                                 <h2>About Me</h2>
-                                <p>I am an aspiring software engineer, having graduated from Durham University in Computer Science. Currently, I'm looking for work, whilst progressing with my passion project, <a href="/revox">ReVox</a>, as well as contributing to the development of the <a href="https://collaction.org" target="_blank" rel="noopener noreferrer">CollAction</a> flutter app.</a></p>
+                                <p>I am a developing software engineer, having graduated from Durham University in Computer Science. Currently, I'm looking for work and developing various personal projects, including <a href="/revox">ReVox</a>. I'm also contributing to the development of <a href="https://collaction.org" target="_blank" rel="noopener noreferrer">CollAction</a>.</a></p>
                                 <p>I'm a firm believer of using the right tool for the job, and I'm always keen to learn a new tech stack/library to solve a problem.</p>
                                 <p>If I'm not programming, I'm usually noodling on the guitar, <a href="/makes">making</a> things, playing basketball or gaming with friends.</p>
                             </div>
                             <div class="portrait col-12 col-sm-4">
-                                <img src="img/profile.jpg">
+                                <img src="rc/profile.jpg">
                             </div>
                         </div>
                     </div>
@@ -219,7 +241,7 @@
         </div>
 
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/portfolio.js"></script>
         <script src="js/script.js"></script>
     </body>
