--- a/ahdio/sostenahto/index.html
+++ b/ahdio/sostenahto/index.html
@@ -29,10 +29,10 @@
                             <a class="nav-link" href="#">Download</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./license-manager.html">License Manager</a>
+                            <a class="nav-link" href="./license-manager">License Manager</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/andre-tm-hui/SustenatoPedal">GitHub</a>
+                            <a class="nav-link" href="https://github.com/andre-tm-hui/Sostenahto">GitHub</a>
                         </li>
                     </ul>
                 </div>
@@ -86,7 +86,7 @@
                 <div class="row section-content">
                     <div class="col-12 container-fluid">
                         <p>In order to raise compatibility with more platforms and DAWs, the plugin needs to be signed and verified as safe on all platforms. Any donations given will be put towards making this possible.</p>
-                        <button href="https://www.buymeacoffee.com/ahdio/e/126269" style="width: 7em;"><span>Donate</span></button>
+                        <a href="https://www.buymeacoffee.com/ahdio/e/126269" class="href-button">Donate</a>
                     </div>
                 </div>
             </section>
