--- a/ahdio/sostenahto/license-manager.html
+++ b/ahdio/sostenahto/license-manager.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">Download</a>
+                            <a class="nav-link" href="./">Download</a>
                         </li>
                         <li class="nav-item nav-selected">
                             <a class="nav-link" href="#">License Manager</a>
