--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/revox">ReVox</a>
+                            <a class="nav-link" href="/ahdio/revox">ReVox</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/sostenahto">Sostenahto</a>
+                            <a class="nav-link" href="/ahdio/sostenahto">Sostenahto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/games">Games</a>
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <ul class="dots list-inline" id="carousel-dots"></ul>
-                    <button href="/projects" style="width: 7em;"><span>See More</span></button>
+                    <a href="./projects" class="href-button">See More</a>
                 </div>
             </section>
 
