--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,10 @@
                 <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/revox">ReVox</a>
+                            <a class="nav-link" href="/ahdio/revox">ReVox</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/ahdio/sostenahto">Sostenahto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/games">Games</a>
