--- a/games.html
+++ b/games.html
@@ -21,7 +21,7 @@
     <body>
         <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top" id="navbar">
             <div class="container-fluid navbar-container">
-                <a class="navbar-brand" href="./"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
+                <a class="navbar-brand" href="./"><img class="nav-home" src="rc/signature.png"  alt="Home"></a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars navbar-toggler-custom-icon"></i>
                 </button>
@@ -68,7 +68,7 @@
                             <h6>Nov '21 - Apr '22</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/drumspv.gif">
+                            <img src="./rc/drumspv.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -87,7 +87,7 @@
                             <h6>May '22 - </h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/holygrailpv.gif">
+                            <img src="./rc/holygrailpv.gif">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -107,7 +107,7 @@
                             <h6>Jun '22</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/sideoutpv.gif">
+                            <img src="./rc/sideoutpv.gif">
                         </div>
                     </li>
                 </ul>
