--- a/makes.html
+++ b/makes.html
@@ -21,7 +21,7 @@
     <body>
         <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top" id="navbar">
             <div class="container-fluid navbar-container">
-                <a class="navbar-brand" href="./"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
+                <a class="navbar-brand" href="./"><img class="nav-home" src="rc/signature.png"  alt="Home"></a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars navbar-toggler-custom-icon"></i>
                 </button>
@@ -66,7 +66,7 @@
                             <h6>Jan '23 -</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/placeholder.png">
+                            <img src="./rc/placeholder.png">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -84,7 +84,7 @@
                             <h6>July '19, revisited Jan '23</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/thinlinetele.png">
+                            <img src="./rc/thinlinetele.png">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -105,7 +105,7 @@
                             <h6>Sept '21 - Dec '21</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/sofle.jpg">
+                            <img src="./rc/sofle.jpg">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -127,7 +127,7 @@
                             <h6>Jan '22 - Apr '22</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/queststrap.jpg">
+                            <img src="./rc/queststrap.jpg">
                         </div>
                     </li>
                 </ul>
