fixed sostenahto list object

--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,8 @@
                             </ul>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="./ahdio/sostenahto"><i class="fa-solid fa-link"></i></a></li>
-                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/ReVox" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item"><a href="https://github.com/andre-tm-hui/Sostenahto" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item"><a href="https://youtu.be/L787l5KAvWw" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-youtube"></i></a></li>
                             </ul>
                             <h6>Mar '23 - May '23</h6>
                         </div>
