updated demo video

--- a/ahdio/sostenahto/index.html
+++ b/ahdio/sostenahto/index.html
@@ -55,7 +55,7 @@
             </section>
 
             <section class="section" style="padding-block: 2%; background-color: #101010;" id="preview-video">
-                <iframe style="width: 80%; max-width: 700px; height: auto; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/L787l5KAvWw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="width: 80%; max-width: 700px; height: auto; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/04bPAeeQo-I" title="Sostenahto Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>
 
             <section class="section" id="about">
