--- a/makes.html
+++ b/makes.html
@@ -52,21 +52,57 @@
                 <ul class="items container-fluid">
                     <li class="row item-container">
                         <div class="col-12 col-sm-7 item-description">
-                            <h3>Custom ??? Guitar</h3>
-                            <h4>TBD</h4>
+                            <h3>Custom Headless</h3>
+                            <h4>Black Burst, Seymour Duncan Hot Rodded</h4>
                             <p>
-                                My second try at building a guitar, this time from scratch. Saw a really nicely figured piece of maple while at Tokyu Hands, Japan, and decided I'd give it a go!<br><br>
-                                Still deciding on the design of the rest of the guitar.
+                                Having built up some experience and leftover wood, I built another guitar. I chose to build a 24-fret headless guitar, loosely inspired by Strandberg. The result is an extremely lightweight guitar with a trem (credits to <a href="https://novaguitarparts.com.br/">Nova Guitar Parts</a>), built to shred!
+                                <br>This time around, the build much smoother, despite my choice of trying multiple new things, like bending a maple cap, building a 5 piece neck, hand-carving various contours etc.
+                                <br><br>SPECS
+                                <br>- Walnut Body
+                                <br>- 5-piece Maple/Walnut Neck
+                                <br>- Curly Maple Cap
+                                <br>- Seymour Duncan Hot Rodded Pickups 
+                                <br>- Push-Pull Split-Coil and Phase Pots
+                                <br>- Nova Guitar Parts 6-String Headless Tremolo Bridge
                             </p>
                             <ul class="list-inline tech-stack-list">
                                 <li class="list-inline-item">Electric Guitar</li>
+                                <li class="list-inline-item">CAD</li>
+                                <li class="list-inline-item">3D Printing</li>
                             </ul>
                             <ul class="list-inline">
                             </ul>
-                            <h6>Jan '23 -</h6>
+                            <h6>Jun '23 - Jul '23</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./rc/placeholder.png">
+                            <img src="./rc/headless.png">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Custom ElectroNylon</h3>
+                            <h4>Natural, Fishman Matrix</h4>
+                            <p>
+                                Inspired by Tim Henson's signature TOD10N, I started my second guitar build, and my first one from scratch. I had to learn a lot about woodworking, sharpening tools etc. 
+                                <br>I might have sent it a bit hard, going for a more complex style of guitar. Admittedly, lots of things could be improved - the binding channels and binding overall being the biggest flaw, and I should've finished the body before gluing up the neck. Things would've been a lot harder if I didn't have a 3D printer to fab tools and templates as well.
+                                <br>Despite this, the guitar still ended up pretty decent, and most importantly feels great to play!
+                                <br><br>SPECS
+                                <br>Walnut Sides and Neck -
+                                <br>Claro Walnut Back, Fretboard and Headstock laminate -
+                                <br>Cedar Top -
+                                <br>Fishman Matrix Infinity Mic Blend Pickups -
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">Electric/Acoustic Guitar</li>
+                                <li class="list-inline-item">CAD</li>
+                                <li class="list-inline-item">3D Printing</li>
+                            </ul>
+                            <ul class="list-inline">
+                            </ul>
+                            <h6>May '23 - Jun '23 -</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./rc/electronylon.png">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -101,7 +137,7 @@
                                 <li class="list-inline-item">Electronics</li>
                                 <li class="list-inline-item">CAD/CAM</li>
                             </ul>
-                            <a href="https://www.thingiverse.com/thing:5407420" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-cubes"></i></a>
+                            <a class="item-href" href="https://www.thingiverse.com/thing:5407420" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-cubes"></i></a>
                             <h6>Sept '21 - Dec '21</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
@@ -123,7 +159,7 @@
                                 <li class="list-inline-item">CAD/CAM</li>
                                 <li class="list-inline-item">Ergonomics</li>
                             </ul>
-                            <a href="https://www.thingiverse.com/thing:5407375" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-cubes"></i></a>
+                            <a class="item-href" href="https://www.thingiverse.com/thing:5407375" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-cubes"></i></a>
                             <h6>Jan '22 - Apr '22</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
