--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <div class="row flex-row-reverse">
                             <div class="about-description col-12 col-sm-7">
                                 <h2>About Me</h2>
-                                <p>I am a developing software engineer, having graduated from Durham University in Computer Science. Currently, I'm looking for work and developing various personal projects, including <a href="/revox">ReVox</a>. I'm also contributing to the development of <a href="https://collaction.org" target="_blank" rel="noopener noreferrer">CollAction</a>.</a></p>
+                                <p>I am a developing software engineer, having graduated from Durham University in Computer Science. Currently, I'm looking for work and developing various personal projects, including <a href="/ahdio/revox">ReVox</a>. I'm also contributing to the development of <a href="https://collaction.org" target="_blank" rel="noopener noreferrer">CollAction</a>.</a></p>
                                 <p>I'm a firm believer of using the right tool for the job, and I'm always keen to learn a new tech stack/library to solve a problem.</p>
                                 <p>If I'm not programming, I'm usually noodling on the guitar, <a href="/makes">making</a> things, playing basketball or gaming with friends.</p>
                             </div>
