--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li>Durham CS graduate,</li>
                             <li>Aspiring software engineer,</li>
                             <li>Developer at <a href="https://collaction.org" target="_blank" rel="noopener noreferrer">CollAction</a></li>
-                            <li>Creator of <a href="/revox">ReVox</a>,</li>
+                            <li>Creator of <a href="/ahdio/revox">ReVox</a>,</li>
                         </ul>
                         <ul class="list-inline">
                             <li class="link-icon list-inline-item"><a href="https://github.com/andre-tm-hui" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
@@ -108,7 +108,9 @@
                                     </ul>
                                 </div>
                                 <div class="col-12 col-sm-7 img-container">
-                                    <img src="rc/placeholder.png">
+                                    <div style="display: flex; align-items: center; align-content: center; height: 100%;">
+                                        <iframe style="width: 100%; height: auto; aspect-ratio: 16/9; margin-block: auto;" src="https://www.youtube.com/embed/04bPAeeQo-I" title="Sostenahto Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    </div>
                                 </div>
                             </div>
                         </a>
