--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,9 @@
                             <h6>Mar '23 - May '23</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./rc/placeholder.png">
+                            <div style="display: flex; align-items: center; align-content: center; height: 100%;">
+                                <iframe style="width: 100%; height: auto; aspect-ratio: 16/9; margin-block: auto;" src="https://www.youtube.com/embed/04bPAeeQo-I" title="Sostenahto Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </li>
                     <li class="row item-container">
